# registry

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  flake.nix  flale.nix  update_openapi.py
.github/: dependabot.yml
.github/workflows/: publish_tag.yml  release.yml  stale.yml  update-master.yml
crates/cli/: Cargo.toml
crates/cli/src/: cmd.rs  main.rs  utils.rs
crates/proc_macro_utils/: Cargo.toml
crates/proc_macro_utils/src/: lib.rs  macro.rs  prompts.rs
crates/schema/: Cargo.toml  build.rs  openapi.json
crates/schema/src/: lib.rs
images/: b600678e-298a-4da2-b07d-507dbde0cf2b.avif
mods/: exampleGit.json  optfine.json  skytils.json
profiles/: hypixel_skyblock_modern.toml
servers/: aspire.toml  hypixel.toml
src/: cmd.rs  main.rs  select.rs  structs.rs  utils.rs
src/generatedschemas/: mod.rs
src/images/: 9461ea08-3ea0-46d4-8a9c-0c1f71486e54.avif  b05f3099-fdc3-4ffc-af4e-cbb88b429219.avif  f91b1ced-4801-49a6-bef8-4324e2352c70.avif  fa41d02a-4f24-429e-84ee-5f2314491c41.avif
src/mods/: optfine.json  skytils.json
src/servers/: aspire.toml  hypixel.toml
xtask/: Cargo.toml  build.rs
xtask/src/: main.rs
