[package]
name = "registry-cli"
version = "0.1.1"
edition = "2024"
license = "gpl-3"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
indicatif = "0.17.11"
inquire = "0.7.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
rfd = "0.15.3"
uuid = { version = "1.16.0", features = ["v4"] }
toml = "0.8.21"

[build-dependencies]
tokio = { version = "1", features = ["full"] }
progenitor = { git = "https://github.com/oxidecomputer/progenitor" }
prettyplease = "0.2"
syn = "2"
serde = { version = "1" }
serde_json = "1"

[profile.release]
opt-level = "z" 
lto = "fat" 
codegen-units = 1
panic = "abort"
strip = true
