[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/cli"]

[workspace.package]
version = "0.1.1"
authors = ["TeaClient", "TeaClient Contributors"]
edition = "2024"
licence = "gpl-3"

[workspace.dependencies]
tokio = { version = "1.48.0", features = ["full"] }
chrono = "0.4.42"
serde = { version = "1.0.228" }
serde_json = "1.0.147"

[profile.release]
opt-level = "z" 
lto = "fat" 
codegen-units = 1
panic = "abort"
strip = true
