[package]
name = "xtask"
version.workspace = true
authors.workspace = true
edition.workspace = true
licence.workspace = true
publish = false

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[features]
lunarservermappings = []

[build-dependencies]
typify = "0.0.16"
prettyplease = "0.2.37"
syn = "2.0.111"
