[package]
name = "xtask"
version.workspace = true
authors.workspace = true
edition.workspace = true
licence.workspace = true
publish = false

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[features]
lunarservermappings = []

[build-dependencies]
typify = "0.4.3"
prettyplease = "0.2.37"
syn = "2.0.111"
