[package]
name = "registry-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
licence.workspace = true

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
tokio.workspace = true
reqwest = { version = "0.13", features = ["json"] }
indicatif = "0.18.4"
inquire = "0.9.4"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
chrono.workspace = true
rfd = "0.17.2"
uuid = { version = "1.23.0", features = ["v4"] }
toml = "1.1.2"

